Issue #1672410: On search screens on mobile devices, make facet blocks into select lists to conserve screen space.
Reviewed-on: https://code.drupalcommerce.org/185
Tested-by: Jenkins <jenkins@commerceguys.com>

--- a/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default.css
+++ b/themes/commerce_kickstart_theme/css/commerce-kickstart-theme-alpha-default.css
@@ -42,6 +42,9 @@
 body {
   margin: 0;
 }
+.selectnav {
+  display: none;
+}
 /**************************************************
 * --
 * 2. Section header
